Sửa vài cái cbx

--- a/ProjectJava/nbproject/project.properties
+++ b/ProjectJava/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=projectjava.ProjectJava
+main.class=projectjava.gui.GUIFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
